# audiomorph-studio

./: .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tsconfig.base.json  vitest.workspace.ts
.github/workflows/: release.yml  test-main.yml  test-nightly.yml  test-pr.yml  update-visual-baselines.yml
.sisyphus/: 01-sidecar-architecture.md  02-nextjs-electron-pwa.md  03-first-run-setup-wizard.md  04-electron-builder-config.md  05-model-storage-ipc.md  boulder.json
.sisyphus/evidence/: task-P0.3-codecs.txt  task-P0.3-macos-version.txt  task-P0.4-doc-coverage.txt  task-P0.4-mmgp-decision.txt  task-W5.1-env-guard.txt  task-W5.2-nsis.txt
.sisyphus/notepads/F3-manual-qa/: issues.md
.sisyphus/notepads/audiomorph-studio/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/testing-integration-e2e/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: audiomorph-studio.md  testing-integration-e2e.md
.test-results/: shell.xml
apps/desktop/: package.json
apps/renderer/: AGENTS.md  next.config.ts  package.json  playwright.component.config.ts  playwright.config.ts  playwright.integration.config.ts  playwright.visual.config.ts
apps/renderer/app/: globals.css  layout.tsx  page.tsx
apps/renderer/lib/: design-tokens.ts
apps/renderer/types/: electron.d.ts
apps/shell/: AGENTS.md  electron-builder.yml  package.json  playwright.e2e.config.ts  tsconfig.json  vitest.config.ts
apps/sidecar/: AGENTS.md  pyproject.toml  pyrightconfig.json  ruff.toml
apps/sidecar/scripts/: required-models.json
apps/sidecar/src/audiomorph/: __init__.py  __main__.py  _auth.py  _errors.py  _logging.py  _watchdog.py  app.py  paths.py  schemas.py
apps/sidecar/src/audiomorph/db/: __init__.py  models.py  repo.py  session.py
apps/sidecar/src/audiomorph/generation/: __init__.py  engine.py
apps/sidecar/src/audiomorph/lyrics/: __init__.py  engine.py
apps/sidecar/src/audiomorph/models/: __init__.py  manager.py  registry.py
apps/sidecar/src/audiomorph/routers/: export.py  jobs.py  lyrics.py  models.py  openrouter.py  settings.py
apps/sidecar/src/audiomorph/services/: ffmpeg.py  first_run.py
apps/sidecar/tests/: conftest.py  test_app.py  test_db_repo.py  test_export_service.py  test_generation_engine.py  test_jobs_router.py  test_lifecycle.py  test_lyrics_engine.py  test_model_registry.py  test_models.py  test_openrouter_router.py  test_paths.py  test_settings_router.py
apps/sidecar/tests/integration/: conftest.py  test_auth_flow.py  test_generation_endpoint.py  test_lyrics_endpoint.py  test_models_endpoint.py  test_telemetry_disabled.py  test_transcription_endpoint.py  test_vault_isolation.py
apps/web/: package.json
docs/: ci-cost-guards.md  error-envelope.md  ffmpeg-platform-matrix.md  heartlib-api-surface.md  pbs-platform-matrix.md  sidecar-protocol.md  testing.md  wheel-matrix-verification.md
scripts/: build-linux.sh  build-mac.sh  build-win.sh  bundle-python.mjs  ci-hf-cache-key.mjs  ci-hf-cache-verify.mjs  post-visual-diff-comment.mjs  scrub-test-output.mjs  smoke-real-engines.mjs  stamp-version.ts  wait-for-url.mjs
(+97 files in other folders)
