[project]
name = "audiomorph-sidecar"
version = "2.0.0"
description = "AudioMorph Studio FastAPI sidecar"
requires-python = ">=3.12,<3.13"
dependencies = [
  "platformdirs",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "psutil>=6.0.0",
  "structlog>=24.1.0",
  "huggingface_hub>=0.23.0",
  "sse-starlette>=2.0.0",
  "sqlmodel>=0.0.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/audiomorph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --junit-xml=.test-results/pytest.xml"
