[project]
name = "audiomorph-sidecar"
version = "2.0.0"
description = "AudioMorph Studio FastAPI sidecar"
requires-python = ">=3.12,<3.13"
dependencies = [
  "platformdirs",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "psutil>=6.0.0",
  "structlog>=24.1.0",
  "huggingface_hub>=0.23.0",
  "sse-starlette>=2.0.0",
  "sqlmodel>=0.0.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "respx>=0.21.0",
  "mypy>=1.11.0",
  "bandit[toml]>=1.7.9",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "respx>=0.21.0",
  "mypy>=1.11.0",
  "bandit[toml]>=1.7.9",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/audiomorph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --junit-xml=.test-results/pytest.xml"
markers = [
  "integration: real-SQLite + stubbed-engine integration tests (slower, isolated tempdir)",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
exclude = ["heartlib", "build", "dist", ".venv", "tests"]
plugins = []
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
show_error_codes = true
pretty = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "huggingface_hub.*",
  "sse_starlette.*",
  "psutil.*",
  "torch.*",
  "transformers.*",
  "librosa.*",
  "soundfile.*",
  "scipy.*",
  "numpy.*",
  "audiocraft.*",
  "whisper.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist", "heartlib"]
skips = [
  "B101",
  "B105",
  "B107",
]
